punto1/ASDR/punto1GrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class punto1GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, WS=7;
	public static final int
		RULE_punto1Grammar = 0, RULE_s = 1, RULE_a = 2, RULE_b = 3, RULE_bprima = 4, 
		RULE_c = 5, RULE_d = 6, RULE_e = 7, RULE_cuatro = 8, RULE_cinco = 9, RULE_seis = 10, 
		RULE_dos = 11, RULE_tres = 12, RULE_uno = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"punto1Grammar", "s", "a", "b", "bprima", "c", "d", "e", "cuatro", "cinco", 
			"seis", "dos", "tres", "uno"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'cuatro'", "'cinco'", "'seis'", "'dos'", "'tres'", "'uno'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public punto1GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Punto1GrammarContext extends ParserRuleContext {
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public Punto1GrammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_punto1Grammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterPunto1Grammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitPunto1Grammar(this);
		}
	}

	public final Punto1GrammarContext punto1Grammar() throws RecognitionException {
		Punto1GrammarContext _localctx = new Punto1GrammarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_punto1Grammar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			s();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public List<BContext> b() {
			return getRuleContexts(BContext.class);
		}
		public BContext b(int i) {
			return getRuleContext(BContext.class,i);
		}
		public DContext d() {
			return getRuleContext(DContext.class,0);
		}
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_s);
		try {
			setState(37);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				a();
				setState(31);
				b();
				setState(32);
				b();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				d();
				setState(35);
				e();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AContext extends ParserRuleContext {
		public DosContext dos() {
			return getRuleContext(DosContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public TresContext tres() {
			return getRuleContext(TresContext.class,0);
		}
		public AContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterA(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitA(this);
		}
	}

	public final AContext a() throws RecognitionException {
		AContext _localctx = new AContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_a);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				dos();
				setState(40);
				b();
				setState(41);
				tres();
				}
				break;
			case EOF:
			case T__0:
			case T__1:
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BContext extends ParserRuleContext {
		public BprimaContext bprima() {
			return getRuleContext(BprimaContext.class,0);
		}
		public BContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitB(this);
		}
	}

	public final BContext b() throws RecognitionException {
		BContext _localctx = new BContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_b);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			bprima();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BprimaContext extends ParserRuleContext {
		public CuatroContext cuatro() {
			return getRuleContext(CuatroContext.class,0);
		}
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public CincoContext cinco() {
			return getRuleContext(CincoContext.class,0);
		}
		public BprimaContext bprima() {
			return getRuleContext(BprimaContext.class,0);
		}
		public BprimaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bprima; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterBprima(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitBprima(this);
		}
	}

	public final BprimaContext bprima() throws RecognitionException {
		BprimaContext _localctx = new BprimaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bprima);
		try {
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				cuatro();
				setState(49);
				c();
				setState(50);
				cinco();
				setState(51);
				bprima();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CContext extends ParserRuleContext {
		public SeisContext seis() {
			return getRuleContext(SeisContext.class,0);
		}
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitC(this);
		}
	}

	public final CContext c() throws RecognitionException {
		CContext _localctx = new CContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_c);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				seis();
				setState(57);
				a();
				setState(58);
				b();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DContext extends ParserRuleContext {
		public UnoContext uno() {
			return getRuleContext(UnoContext.class,0);
		}
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public DContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterD(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitD(this);
		}
	}

	public final DContext d() throws RecognitionException {
		DContext _localctx = new DContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_d);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				uno();
				setState(64);
				a();
				setState(65);
				e();
				}
				break;
			case T__0:
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				b();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EContext extends ParserRuleContext {
		public TresContext tres() {
			return getRuleContext(TresContext.class,0);
		}
		public EContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_e; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitE(this);
		}
	}

	public final EContext e() throws RecognitionException {
		EContext _localctx = new EContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_e);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			tres();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuatroContext extends ParserRuleContext {
		public CuatroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuatro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterCuatro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitCuatro(this);
		}
	}

	public final CuatroContext cuatro() throws RecognitionException {
		CuatroContext _localctx = new CuatroContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cuatro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CincoContext extends ParserRuleContext {
		public CincoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cinco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterCinco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitCinco(this);
		}
	}

	public final CincoContext cinco() throws RecognitionException {
		CincoContext _localctx = new CincoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cinco);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeisContext extends ParserRuleContext {
		public SeisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterSeis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitSeis(this);
		}
	}

	public final SeisContext seis() throws RecognitionException {
		SeisContext _localctx = new SeisContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_seis);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DosContext extends ParserRuleContext {
		public DosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterDos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitDos(this);
		}
	}

	public final DosContext dos() throws RecognitionException {
		DosContext _localctx = new DosContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_dos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TresContext extends ParserRuleContext {
		public TresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tres; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterTres(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitTres(this);
		}
	}

	public final TresContext tres() throws RecognitionException {
		TresContext _localctx = new TresContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_tres);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnoContext extends ParserRuleContext {
		public UnoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uno; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).enterUno(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto1GrammarListener ) ((punto1GrammarListener)listener).exitUno(this);
		}
	}

	public final UnoContext uno() throws RecognitionException {
		UnoContext _localctx = new UnoContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_uno);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}